// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContentSeparator snapshot should match snapshot when another component is used 1`] = `
<ContentSeparator>
  <li
    className="md-content-separator-wrapper"
    role="separator"
  >
    <div>
      <div>
        Some nested text
      </div>
    </div>
  </li>
</ContentSeparator>
`;

exports[`ContentSeparator snapshot should match snapshot when text is used 1`] = `
<ContentSeparator>
  <li
    className="md-content-separator-wrapper"
    role="separator"
  >
    hello
  </li>
</ContentSeparator>
`;
